# ipfs-registry

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  coverage_grcov.makefile.toml
.github/workflows/: library.yaml
fixtures/: .gitignore  mock-crate-1.0.0.crate  mock-package-1.0.0.tgz  payload-too-large-1.0.0.tgz
fixtures/confusable-package/: package.json
fixtures/mock-crate/: Cargo.toml
fixtures/mock-package/: package.json
migrations/: 20220908045836_ipfs-registry.sql
sandbox/: config.toml
src/: config.rs  error.rs  lib.rs  main.rs
tests/integration/: access_control.rs  confusable_namespace.rs  confusable_package.rs  database.rs  fetch.rs  fetch_not_found.rs  main.rs  package_publish.rs  publish.rs  publish_allow_unauthorized.rs  publish_conflict.rs  publish_deny_unauthorized.rs  publish_too_large.rs  semver.rs  yank.rs
tests/integration/test_utils/: mod.rs
workspace/client/: Cargo.toml
workspace/client/src/: client.rs  commands.rs  error.rs  fetch.rs  helpers.rs  input.rs  keygen.rs  lib.rs  publish.rs
workspace/core/: Cargo.toml
workspace/core/src/: error.rs  lib.rs  package.rs  tarball.rs  validate.rs
workspace/database/: Cargo.toml
workspace/database/src/: error.rs  lib.rs  model.rs  value_objects.rs
workspace/database/src/model/: mod.rs  namespace.rs  package.rs  publisher.rs
workspace/server/: Cargo.toml
workspace/server/src/: config.rs  error.rs  headers.rs  lib.rs  server.rs
workspace/server/src/handlers/: mod.rs  namespace.rs  package.rs  publisher.rs  webhooks.rs
workspace/server/src/layer/: file.rs  ipfs.rs  memory.rs  mod.rs  s3.rs
