[package]
name = "ipfs-registry"
version = "0.1.0"
edition = "2021"
description = "Signed package registry backed by IPFS"

[workspace]
members = [
  "workspace/client",
  "workspace/core",
  "workspace/server",
]

[dependencies]

ipfs-registry-client = { path = "workspace/client" }
ipfs-registry-server = { path = "workspace/server" }

clap = { version = "3", features = ["derive", "wrap_help"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = { version = "1", features = ["serde"] }
mime = "0.3"
url = { version = "2", features = ["serde"] }
web3-address = { version = "0.4", features = ["ethereum"] }
serde_json = "1"

[[bin]]
name = "ipkg"
path = "src/main.rs"

#[patch.crates-io]
 #ipfs-api-backend-hyper= { path = "../../forks/rust-ipfs-api/ipfs-api-backend-hyper" }
