[package]
name = "ipfs-registry-client"
version = "0.1.0"
edition = "2021"
description = "Signed package registry client for IPFS"

[dependencies]
clap = { version = "3", features = ["derive", "wrap_help"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
serde_json = "1"

[[bin]]
name = "ipkg-client"
path = "src/bin/main.rs"
