[package]
name = "ipfs-registry-client"
version = "0.1.0"
edition = "2021"
description = "Signed package registry client for IPFS"

[dependencies]
ipfs-registry-core = { version = "*", path = "../core" }

clap = { version = "3", features = ["derive", "wrap_help"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
serde_json = "1"
web3-keystore = "0.4"
k256 = { version = "0.11", features = ["ecdsa", "sha256", "keccak256"] }
mime = "0.3"
web3-address = { version = "0.4", features = ["ethereum"] }
semver = { version = "1", features = ["serde"] }
reqwest = { version = "0.11", features = ["rustls", "json", "stream"] }
rand = "0.8"
base64 = "0.13"
rustyline = "10"
rustyline-derive = "0.7"
unicode-width = "0.1"
secrecy = "0.8"
