[package]
name = "ipfs-registry-core"
version = "0.1.0"
edition = "2021"
description = "Common types for the IPFS registry"

[dependencies]
thiserror = "1"
flate2 = { version = "1", features = ["zlib-ng"] }
tar = "0.4"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["base64"] }
web3-address = { version = "0.4", features = ["ethereum"] }
hex = { version = "0.4", features = ["serde"] }
cid = { version = "0.8", features = ["serde-codec"] }
toml = "0.5"
sha3 = "0.10"
unicode-security = "0"

[dev-dependencies]
anyhow = "1"
