[package]
name = "ipfs-registry-database"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
web3-address = { version = "0.4", features = ["ethereum"] }
semver = { version = "1", features = ["serde"] }
serde_json = "1"
