[package]
name = "ipfs-registry-database"
version = "0.1.0"
edition = "2021"

[dependencies]
ipfs-registry-core = { version = "*", path = "../core" }

thiserror = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
web3-address = { version = "0.4", features = ["ethereum"] }
semver = { version = "1", features = ["serde"] }
serde_json = "1"
cid = { version = "0.8", features = ["serde-codec"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.14", features = ["serde", "formatting", "parsing", "serde-well-known"] }
hex = { version = "0.4", features = ["serde"] }

