[package]
name = "ipfs-registry-server"
version = "0.1.0"
edition = "2021"
description = "Signed package registry server for IPFS"

[dependencies]

ipfs-registry-core = { version = "*", path = "../core" }

clap = { version = "3", features = ["derive", "wrap_help"] }
thiserror = "1"
axum = { version = "0.5", features = ["headers", "ws"] }
axum-macros = { version = "0.2" }
axum-server = { version = "0.4", features = ["tls-rustls"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
serde_json = "1"
ipfs-api-backend-hyper = { version = "0.5", features = ["with-send-sync", "with-hyper-rustls"] }
mime = "0.3"
futures = "0.3"
semver = { version = "1", features = ["serde"] }
k256 = { version = "0.11", features = ["ecdsa", "sha256", "keccak256"] }
once_cell = "1"
base64 = "0.13"
web3-address = { version = "0.4", features = ["ethereum"] }
async-trait = "0.1"
rusoto_s3 = "0.48"
rusoto_core = "^0.48.0"
rusoto_signature = "^0.48.0"
indexmap = {version = "1.9", features = ["serde-1"]}
tokio-util = "0.7"
sha3 = "0.10"
cid = { version = "0.8", features = ["serde-codec"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "any" ] }
